Further changes to file formatting to expose images to GIT for pages deployment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </h1>
     </header>
 
-    <section class="background" alt="Marketing meeting"></section>
+    <section class="background">
+        <img src="assets/images/digital-marketing-meeting.jpg" alt="Marketing meeting"/>
+    </section>
       
     <main class="main-content">
         <article class="featurecontainer" id="search-engine-optimization">
